<resources>
    <string name="app_name">PolarSDKExample</string>
    <string name="listen_broadcast">listen broadcast</string>
    <string name="connect_to_device">Connect to %s</string>
    <string name="auto_connect_toggle">auto connect toggle</string>
    <string name="scan_devices">scan_devices</string>
    <string name="start_hr_stream">start_hr_stream</string>
    <string name="start_ecg_stream">start_ecg_stream</string>
    <string name="start_acc_stream">start_acc_stream</string>
    <string name="start_gyro_stream">start_gyro_stream</string>
    <string name="start_ppg_stream">start_ppg_stream</string>
    <string name="start_ppi_stream">start_ppi_stream</string>
    <string name="enable_sdk_mode">enable_sdk_mode</string>
    <string name="set_time">set_time</string>
    <string name="get_time">get_time</string>
    <string name="get_disk_space">get_disk_space</string>
    <string name="list_recordings">list_recordings</string>
    <string name="start_recording">start_recording</string>
    <string name="stop_recording">stop_recording</string>
    <string name="download_recording">download_recording</string>
    <string name="delete_recording">delete_recording</string>
    <string name="disable_sdk_mode_led_animation">disable_sdk_mode_led_animation</string>
    <string name="disable_ppi_mode_led_animation">disable_ppi_mode_led_animation</string>
    <string name="do_factory_reset">do_factory_reset</string>
    <string name="disconnect_from_device">Disconnect from %s</string>
    <string name="listening_broadcast">listening_broadcast</string>
    <string name="scanning_devices">stop device scan</string>
    <string name="stop_hr_stream">Stop Hr Stream</string>
    <string name="stop_ecg_stream">Stop ECG Stream</string>
    <string name="stop_acc_stream">Stop ACC Stream</string>
    <string name="stop_gyro_stream">Stop_GYRO_Stream</string>
    <string name="stop_ppg_stream">stop ppg streaming</string>
    <string name="stop_ppi_stream">stop ppi streaming</string>
    <string name="enable_sdk_mode_led_animation">Enable SDK mode led animation</string>
    <string name="enable_ppi_mode_led_animation">Enable PPI mode led animation</string>
    <string name="disable_sdk_mode">Disable SDK mode</string>
    <string name="sampling_rate">Sampling rate</string>
    <string name="resolution">Resolution</string>
    <string name="range">Range</string>
    <string name="channels">Channels</string>
    <string name="ok">ok</string>
    <string name="lasensorbtn">Left Arm Sensor</string>
    <string name="llsensorbtn">Left Leg Sensor</string>
    <string name="rasensorbtn">Right Arm Sensor</string>
    <string name="rlsensorbtn">Right Leg Sensor</string>
    <string name="lahrbtn">LA HR Streaming</string>
    <string name="lappgbtn">LA PPG Streaming</string>
    <string name="laaccbtn">LA ACC Streaming</string>
    <string name="lagyrobtn">LA GYRO Streaming</string>
    <string name="llaccbtn">LL ACC Streaming</string>
    <string name="llgyrobtn">LL GYRO Streaming</string>
    <string name="raaccbtn">RA ACC Streaming</string>
    <string name="ragyrobtn">RA GYRO Streaming</string>
    <string name="rlaccbtn">RL ACC Streaming</string>
    <string name="rlgyrobtn">RL GYRO Streaming</string>
</resources>